# palestra-python-floripa

./: Dockerfile  README.md  notas.md  pip.conf
uv_part2/benchmark/bconda/: environment.yaml
uv_part2/benchmark/bpip/: requirements.txt
uv_part2/benchmark/bpoetry/: pyproject.toml
uv_part2/benchmark/buv/: main.py  pyproject.toml
uv_part2/new_app/: main.py  pyproject.toml
venv_part1/: example_numpy1.py  pets1.py  pets2.py
venv_part1/packaging_kittycat/v1.0/: README.md  pyproject.toml
venv_part1/packaging_kittycat/v1.0/src/kitty_cat/: example.py
venv_part1/packaging_kittycat/v1.1/: pyproject.toml
venv_part1/packaging_kittycat/v1.1/src/kitty_cat/: example.py
