[project]
name = "kitty_cat"
version = "1.0"
authors = [
  { name="Diogo Junior de Souza", email="diogojrdesouza@gmail.com" },
]
description = "A small example package with kitten functions"
readme = "README.md"
requires-python = ">3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

